# pydarts

./: .gitignore  LICENSE  README.adoc  README.md  __main__.py  app.py  games.py  modes.py  pydarts.py  pydarts.spec  pyproject.toml  window.py
.github/: CODEOWNERS
modules/: app.py  games.py  pydarts.py  tkhelper.py  windows.py
pydarts/: __init__.py  __main__.py  app.py  main.py  widgets.py
pydarts/core/: errors.py  games.py  metadata.py  models.py  modes.py
pydarts/gui/: __init__.py  app.py  appwindow.py  pregame.py  pregamewindow.py  tkhelper.py
pydarts/gui/pregame/: __init__.py  modes_tab.py  overview_tab.py  players_tab.py  root.py  texts.py
pydarts/gui/toplevel/: __init__.py
pydarts/help/: pyh.py  tkh.py
pydarts/widgets/: __init__.py  application.py  game_widget.py  main_window.py  post_game_widget.py  pre_game_tab_widget.py  pre_game_widget.py
pydarts/widgets/ui/: __init__.py  game_widget.py  game_widget.ui  main_window.py  main_window.ui  post_game_widget.py  post_game_widget.ui  pre_game_tab_widget.py  pre_game_tab_widget.ui  pre_game_widget.py  pre_game_widget.ui
