[build-system]
requires = ["setuptools>=68.0", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydarts"
description = "This is a Python app for tracking the score of a Darts game."
readme = "README.md"
authors = [{ name = "Martin Neufeld" }]
dynamic = ["version"]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["PySide6==6.6.2"]

[project.scripts]
pydarts = "pydarts.main:main"

[project.urls]
"Homepage" = "https://github.com/shyguys/pydarts"
"Bug Tracker" = "https://github.com/shyguys/pydarts/issues"

[tool.setuptools]
py-modules = ["pydarts"]

[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools_scm
